# r-os

./: Makefile.toml
devenv/: install_package.sh  make_dist.sh  make_image.sh  mount_image.sh  run_image.sh  run_qemu.sh
kernel/: Cargo.toml  x86_64-unknown-none-elf.json
kernel/.cargo/: config.toml
kernel/src/: main.rs
loader/: Cargo.toml
loader/src/: main.rs
