[package]
name = "loader"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "loader"
test = false
bench = false

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = { version = "1.5.0", default-features = false }
goblin = { version = "0.7.1", default-features = false, features = [
  "elf64",
  "alloc",
  "elf32",
  "mach64",
  "mach32",
] }
log = { version = "0.4.20", default-features = false }
uefi = { version = "0.26.0", features = [
  "alloc",
  "logger",
  "global_allocator",
  "unstable",
] }
uefi-services = "0.23.0"
